--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,9 @@ steps:
   displayName: 'npm compile scss'
 
 - task: CopyFiles@2
+  displayName: 'Copy Files for Archiving'
   inputs:
+    SourceFolder: '.\'
     Contents: |
       src\**
       !src\style\**
@@ -34,18 +36,13 @@ steps:
     CleanTargetFolder: true
 
 - task: ArchiveFiles@2
+  displayName: 'Archive Files'
   inputs:
     rootFolderOrFile: '$(Build.ArtifactStagingDirectory)/dist'
     includeRootFolder: false
     archiveType: 'zip'
     archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
     replaceExistingArchive: true
-
-- task: DeleteFiles@1
-  inputs:
-    SourceFolder: '$(Build.ArtifactStagingDirectory)/dist'
-    Contents: '**'
-    RemoveSourceFolder: true
 
 - task: PublishBuildArtifacts@1
   inputs:
