--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,10 +28,9 @@ steps:
 - task: CopyFiles@2
   displayName: 'Copy Files for Archiving'
   inputs:
-    SourceFolder: '.\'
     Contents: |
-      src\**
-      !src\style\**
+      src/**
+      !src/style/**
     TargetFolder: '$(Build.ArtifactStagingDirectory)/dist'
     CleanTargetFolder: true
 
