--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,11 +37,17 @@ steps:
 - task: ArchiveFiles@2
   displayName: 'Archive Files'
   inputs:
-    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)/dist'
+    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)/dist/src'
     includeRootFolder: false
     archiveType: 'zip'
     archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
     replaceExistingArchive: true
+
+- task: DeleteFiles@1
+  inputs:
+    SourceFolder: '$(Build.ArtifactStagingDirectory)/dist'
+    Contents: '**'
+    RemoveSourceFolder: true
 
 - task: PublishBuildArtifacts@1
   inputs:
