--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,7 @@ steps:
 
 
 - task: UseNode@1
+  displayName: 'Install npm'
   inputs:
     checkLatest: true
 
@@ -44,12 +45,14 @@ steps:
     replaceExistingArchive: true
 
 - task: DeleteFiles@1
+  displayName: 'Delete Files'
   inputs:
     SourceFolder: '$(Build.ArtifactStagingDirectory)/dist'
     Contents: '**'
     RemoveSourceFolder: true
 
 - task: PublishBuildArtifacts@1
+  displayName: 'Publish Build Artifacts'
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
