Add Docker Support

--- a/Portfolio.Server/appsettings.json
+++ b/Portfolio.Server/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SassCompiler": {
+    "SourceFolder": "wwwroot\\style",
+    "TargetFolder": "wwwroot\\css",
+    "Arguments": "--style=compressed"
+  }
 }
